# buffalo

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .pre-commit-hooks.yaml  BUILD_SYSTEM.md  CHANGELOG.md  CHANGELOG_v0.5.0.md  CLI_COMMANDS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v1.0.0.md  TEST_RESULTS_PLUGINS.md  TEST_SUMMARY.md  build.ps1  build.sh  docker-compose.yml  go.mod  go.sum  install.ps1  install.sh  v0.2.0-SUMMARY.md
.github/workflows/: buffalo-build.yml  buffalo-release.yml  ci.yml
bazel/rules_buffalo/: BUILD.bazel  MODULE.bazel  README.md
bazel/rules_buffalo/buffalo/: BUILD.bazel  defs.bzl  extensions.bzl  gen_runner.py  repositories.bzl
cmd/buffalo/: main.go
configs/: buffalo-with-deps.yaml  buffalo-with-plugins.yaml  default.yaml  simple.yaml
docs/: ARCHITECTURE.md  CI_CD_GUIDE.md  CONFIG_GUIDE.md  DB_PLAN.md  DEVELOPMENT.md  METRICS_GUIDE.md  MODELS_GUIDE.md  MODELS_NEXT_STEPS.md  PLUGIN_CLI.md  PLUGIN_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  ROADMAP.md  SYSTEM_READINESS.md  v0.0.0-STATUS.md  v0.1.0-COMPLETE.md  v0.1.0-STATUS.md  v0.1.0-SUMMARY.md  v0.2.0-STATUS.md
docs/readme/: CLI_CHEATSHEET.md  GRAPH_AND_WORKSPACE.md  INSTALLATION.md  MODELS.md  PERMISSIONS.md  QUICK_START.md  TOOLS.md
examples/: pre-commit-config.yaml
examples/ci/: gitlab-ci.yml
examples/models/: 00_basic.proto  10_model_options_full.proto  20_field_options_full.proto  30_relations_full.proto  README.md
examples/python/: README.md  buffalo.yaml
internal/bazel/: bazel_test.go  detector.go  generator.go  integration.go  parser.go  query.go  types.go
internal/builder/: builder.go  builder_error_test.go  builder_test.go  cache.go  cache_test.go  executor.go  executor_test.go  parser.go  parser_test.go  resolver.go  resolver_test.go  tools.go  types.go
internal/cli/: bazel.go  build.go  check.go  clear.go  config.go  deps.go  diff.go  doctor.go  format.go  graph.go  init.go  init_test.go  install.go  lint.go  list.go  lsp.go  metrics.go  metrics_export.go  models.go  permissions.go  plugin.go  rebuild.go  root.go  stats.go  template.go  tools.go  tools_pin.go  upgrade.go  validate.go  version.go  watch.go  workspace.go
internal/compiler/: compiler.go  compiler_test.go
internal/config/: config.go  config_test.go  defaults.go  env.go  lock.go  lock_test.go  migrate.go  schema.go
internal/dependency/: downloader.go  manager.go  types.go
internal/embedded/: embed.go  extract.go  extract_test.go
internal/embedded/bazel/rules_buffalo/: MODULE.bazel  README.md
internal/embedded/bazel/rules_buffalo/buffalo/: BUILD.bazel  config_output_dir.py  defs.bzl  extensions.bzl  gen_runner.py  repositories.bzl
internal/graph/: analyzer.go  analyzer_test.go  graph.go  graph_test.go  renderer.go  renderer_test.go  stats.go  stats_test.go
internal/lsp/: analyzer.go  capabilities.go  completions.go  diagnostics.go  diagnostics_test.go  handlers.go  lsp_test.go  protocol.go  server.go
internal/metrics/: metrics.go
internal/models/: codegen.go  codegen_cpp.go  codegen_go.go  codegen_python.go  codegen_rust.go  codegen_test.go  codegen_typescript.go  codegen_typescript_examples_test.go  parser.go  parser_test.go  plugin.go  types.go
internal/permissions/: analyzer.go  generator.go  matrix.go  parser.go  permissions_test.go  types.go
internal/plugin/: builtin.go  integration_test.go  loader.go  registry.go  registry_test.go  types.go
internal/sandbox/: runner.go  runner_test.go
internal/system/: checker.go
internal/template/: manager.go
internal/tools/: installer.go  installer_test.go  types.go  types_test.go
internal/upgrade/: checker.go  migrator.go  types.go  upgrade.go  upgrade_test.go
internal/validation/: codegen.go  codegen_test.go  integration_test.go  parser.go  parser_test.go  (+3 more)
schemas/: buffalo.schema.json
scripts/: build.ps1  build.sh  push.ps1  push.sh
test-project/: TEMPLATES_TESTING.md  buffalo-plugin-test.yaml  buffalo.yaml  go.mod  go.sum  main.go  pyproject.toml  test-data.json  test_import.py
(+105 files in other folders)
