module(
    name = "rules_buffalo",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.7.0")

# Locate the buffalo binary on the host system. Consumers do not need to
# repeat this — the implicit `buffalo` attribute of buffalo_proto_compile
# already points at @buffalo_toolchain//:buffalo_bin.
buffalo = use_extension("//buffalo:extensions.bzl", "buffalo")
use_repo(buffalo, "buffalo_toolchain")
