load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "gen_runner",
    srcs = ["gen_runner.py"],
    main = "gen_runner.py",
)

exports_files([
    "defs.bzl",
    "extensions.bzl",
    "repositories.bzl",
    "gen_runner.py",
])
