module(
    name = "rules_buffalo",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.7.0")

# Hermetic Python interpreter used by the buffalo toolchain to install
# grpcio-tools (Python gRPC plugin) without depending on host Python.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = False,
    ignore_root_user_error = True,
)
use_repo(python, "python_3_12_host")

# Hermetic Buffalo + protoc + Go/Python plugin toolchain.
buffalo = use_extension("//buffalo:extensions.bzl", "buffalo")
use_repo(buffalo, "buffalo_toolchain")
